# llm-style-terrain-joint

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml
data/: .gitignore  __init__.py  height_dataset.py
dataset/: height_map_dataset.py  unet_dataset.py
docs/: goals.md  heightmap_vae_evaluation.md  now.md  roadmap.md  todolist.md
inference/: inference_pipeline.py
models/clip/: __init__.py  text_encoder.py
models/dit/: __init__.py  dit_8ch.py
models/unet/: __init__.py  unet_8ch.py
models/vae/: __init__.py  heightmap_vae.py
scripts/: download_models.py  generate_test_data.py  train_height_vae.py
scripts/data_process/preprocess/: preprocess_heightmaps.py  preprocess_unet.py
scripts/data_process/verify/: scan_heightmaps.py
scripts/dit/: train_dit_full.py
scripts/height_vae/: train_height_vae.py  train_height_vae_full.py
scripts/u-net/: train_u-net_full.py
scripts/unet/: train_unet_full.py  unet_full.py
train/: train_pipeline.py
utils/: latent_utils.py
