[project]
name = "llm-style-terrain-joint"
version = "0.1.0"
description = "Natural language-driven full-style terrain geometry-texture latent space joint generation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "diffusers>=0.37.1",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.6.1",
]
